<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_auth.xml"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="org.d3ifcool.hystorms.ui.auth.SplashFragment"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="org.d3ifcool.hystorms.ui.auth.RegisterFragment"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="org.d3ifcool.hystorms.ui.auth.LoginFragment"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_forgetPasswordFragment"
            app:destination="@id/forgetPasswordFragment" />
    </fragment>
    <fragment
        android:id="@+id/forgetPasswordFragment"
        android:name="org.d3ifcool.hystorms.ui.auth.ForgetPasswordFragment"
        tools:layout="@layout/fragment_forget_password" >
        <action
            android:id="@+id/action_forgetPasswordFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
</navigation>